rawMaterial refactoring